2023-11-18 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCicode.c,
	  src/SDCCicode.h:
	  Directly create iCode chain instead of via intermediate set-style linked list.

2023-11-18 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/tests/bug-3675.c:
	  Regression test for bug #3675.
	* src/SDCCicode.c,
	  src/SDCCopt.c,
	  src/SDCCgenconstprop.cc,
	  src/SDCClrange.c:
	  Code refactoring for iCode operand replacement.
	* src/mcs51/gen.c:
	  Fix a typo.

2023-11-16 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/mcs51/gen.c,
	  src/mcs51/gen.h:
	  Provide mcs51IsParmInCall.

2023-11-16 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/mcs51/gen.c:
	  Replace further uses of fReturn by aopArg and aopRet.

2023-11-16 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/mcs51/ralloc.c,
	  src/mcs51/ralloc.h:
	  Fix mcs51_regname_to_idx, patch by Oleg Endo.
	* src/mcs51/peeph.def:
	  Fix peephole optimizer rule 186.e, patch by Oleg Endo.

2023-11-16 Philipp Klaus Krause <philipp@colecovision.eu>

	* doc/sdccman.lyx:
	  Improve mcs51 calling convention documentation.
	* src/mcs51/gen.c,
	  src/mcs51/gen.h,
	  src/mcs51/main.c,
	  src/mcs51/rtrack:
	  Use aopArg, provide mcs51IsReturned and mcs51IsRegArg.

2023-11-14 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/mcs51/gen.c,
	  src/mcs51/gen.h:
	  Use aopRet.

2023-11-13 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/mcs51/gen.c:
	  Basic aopArg for mcs51.

2023-11-13 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/mcs51/gen.c,
	  src/mcs51/gen.h,
	  src/stm8/gen.c,
	  src/z80/gen.c:
	  Handle return values via aopRet.

2023-11-13 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/mcs51/gen.h,
	  src/mcs51/gen.c:
	  mcs51 code generation refactoring.

2023-11-13 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.h,
	  src/z80/gen.c:
	  Burn AOP_STR.

2023-11-12 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/mcs51/gen.c: